# backlit-kbd

./: .gitignore  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/agents/: Mirage.agent.md
.github/skills/adaptive-mind/: SKILL.md
.github/skills/adversarial-reviewer/: SKILL.md
.github/skills/codebase-archaeologist/: SKILL.md
.github/skills/ddgs/: SKILL.md
.github/skills/hypothesis-engine/: SKILL.md
.github/workflows/: ci.yml  publish.yml
examples/: blink_notification.py  brightness_wave.py  disco_light.py
src/backlit_kbd/: __init__.py  __main__.py  cli.py  controller.py  errors.py  factory.py  notifications.py  types.py
src/backlit_kbd/backends/: __init__.py  base.py  linux_sysfs.py  mock.py
tests/: test_controller.py  test_notifications.py
